--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,7 +181,7 @@ concurrency = ["thread", "multiprocessing"]
 omit = ["/tmp/*"]
 
 [tool.coverage.paths]
-source = ["nemo_rl/", "/opt/nemo-rl/nemo_rl/"]
+source = ["nemo_rl/"]
 
 [tool.ruff.lint]
 # Enable all `pydocstyle` rules, limiting to those that adhere to the
