added kwargs to rewards
Signed-off-by: Rohit Jena <rohit.rango@gmail.com>

--- a/examples/configs/grpo_clevr_cogent_trainA.yaml
+++ b/examples/configs/grpo_clevr_cogent_trainA.yaml
@@ -151,6 +151,9 @@ env:
         weight: 0.1
       - name: bbox_giou
         weight: 0.9
+        kwargs: 
+          giou_penalty_thres: 0.5
+
 
 logger:
   log_dir: "logs"  # Base directory for all logs
