--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requires-python = ">=3.12"
 license = {text = "Apache 2.0"}
 dependencies = [
     "setuptools",
-    "ninja",  # for flash-attn parallel build
+    "ninja", # for flash-attn parallel build
     "torch==2.7.0",
     "triton",
     "colored==2.2.3",
@@ -47,6 +47,7 @@ dependencies = [
     "sympy>=1.14.0",
     "pillow>=11.2.1",
     "torchvision>=0.22.0",
+    "ipython>=9.4.0",
 ]
 
 [project.optional-dependencies]
@@ -58,7 +59,7 @@ automodel = [
     "flash-attn==2.7.4.post1",
 ]
 vllm = [
-    "vllm==0.9.1",
+    "vllm==0.9.2",
     # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
     "flash-attn==2.7.4.post1",
 ]
