--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires-python = ">=3.12"
 license = {text = "Apache 2.0"}
 dependencies = [
     "setuptools",
-    "ninja",  # for flash-attn parallel build
+    "ninja", # for flash-attn parallel build
     "torch==2.7.0",
     "triton",
     "colored==2.2.3",
@@ -45,6 +45,11 @@ dependencies = [
     "nvtx",
     "matplotlib",
     "plotly",
+    "sympy>=1.14.0",
+    "pillow>=11.2.1",
+    "torchvision>=0.22.0",
+    "ipython>=9.4.0",
+    "num2words>=0.5.14",   # for SmolVLM
     "mlflow",
 ]
 
@@ -57,7 +62,9 @@ automodel = [
     "flash-attn==2.7.4.post1",
 ]
 vllm = [
-    "vllm==0.9.0",
+    "vllm==0.9.2",
+    #"vllm==0.10.0",
+    "num2words>=0.5.14",
     # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
     "flash-attn==2.7.4.post1",
 ]
@@ -188,7 +195,7 @@ concurrency = ["thread", "multiprocessing"]
 omit = ["/tmp/*"]
 
 [tool.coverage.paths]
-source = ["nemo_rl/", "/opt/nemo-rl/nemo_rl/"]
+source = ["nemo_rl/"]
 
 [tool.ruff.lint]
 # Enable all `pydocstyle` rules, limiting to those that adhere to the
